Cambios a mi pagina web

--- a/index.html
+++ b/index.html
@@ -1,34 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TIENDA DE COSMÉTICOS</title> <!-- Comentario: Este es el titulo de mi pagina web-->
-    <!-- Comentario: Esta es la estructura basica de un documento HTML5 -->
+    <title>TIENDA DE COSMÉTICOS - VaniBlush</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1><strong>BIENVENIDO A VANIBLUSH</strong></h1>
+    <!-- Encabezado -->
+    <header>
+        <h1>🌸 BIENVENIDO A VANIBLUSH 🌸</h1>
+        <h2>"Porque la belleza es para todos"</h2>
+    </header>
 
-    <img src=imagen1.png alt="1er logo VaniBlush" width="500" height="200">
-    <!-- Comentario: Esta es una imagen relacionada con mis hobbies -->
+    <!-- Logo -->
+    <div class="logo">
+        <img src="imagen1.png" alt="1er logo VaniBlush" width="400">
+    </div>
 
-    <!-- Comentario: Este es un encabezado de nivel 1 -->
+    <!-- Eslogan -->
+    <section class="intro">
+        <p>Aquí tendrás acceso a diferentes cosméticos de alta calidad a precios accesibles.</p>
+    </section>
 
-     <h2>
-        <em>"PORQUE LA BELLEZA ES PARA TODOS"</em>
-        <br> <!-- Comentario: Este es un salto de linea -->
-        Aca tendras acceso a diferentes cosmeticos de alta calidad a precios accesibles
-    </h2>
-    <hr> <!-- Comentario: Esta es una linea horizontal -->
-    
+    <hr>
 
-    <img src=imagen2.jpeg alt ="2do logo VaniBlush" width="500" height="200">
-    <h3><mark>POR EL MOMENTO NOS ENCONTRAMOS SIN STOCK EN NUESTROS PRODUCTOS</mark></h3>
+    <!-- Imagen secundaria -->
+    <div class="logo">
+        <img src="imagen2.jpeg" alt="2do logo VaniBlush" width="400">
+    </div>
 
-    <p>
-        Pagina creada por Juan Mateo y Arely :D
-        <br> <!-- Comentario: Este es un salto de linea -->
-        Esperamos que te guste nuestra pagina web
-    </p>
+    <!-- Aviso de stock -->
+    <section class="aviso">
+        <h3>⚠️ Por el momento nos encontramos sin stock en nuestros productos ⚠️</h3>
+    </section>
+
+    <!-- Párrafo normal -->
+    <p>Página creada por <strong>Juan Mateo</strong> y <strong>Arely</strong> 😀</p>
+
+    <!-- Párrafo con clase titulo -->
+    <p class="titulo">✨ Sección especial de la tienda ✨</p>
+
+    <!-- Caja -->
+    <div class="caja">
+        Esta es una caja de ejemplo con fondo amarillo, borde azul, padding y margin.
+    </div>
+
+    <!-- Párrafo único -->
+    <p id="especial">🌟 Este párrafo es único, con estilo diferente 🌟</p>
+
+    <!-- Botón -->
+    <div class="centrado">
+        <button class="boton">💄 Explorar productos</button>
+    </div>
+
+    <!-- Contenedor -->
+    <div class="contenedor borde fondo esquinas sombra">
+        Este es un contenedor con varios estilos combinados.
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 VaniBlush - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
