--- a/index.html
+++ b/index.html
@@ -1,67 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TIENDA DE COSMÉTICOS - VaniBlush</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VaniBlush | Belleza para todos</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Encabezado -->
-    <header>
-        <h1>🌸 BIENVENIDO A VANIBLUSH 🌸</h1>
-        <h2>"Porque la belleza es para todos"</h2>
-    </header>
+  <header>
+    <h1>VaniBlush</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="activo">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="ofertas.html">Ofertas</a></li>
+        <li><a href="nosotros.html">Nosotros</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Logo -->
-    <div class="logo">
-        <img src="imagen1.png" alt="1er logo VaniBlush" width="400">
-    </div>
+  <section class="hero">
+    <h2>💄 Belleza natural, auténtica y accesible 💖</h2>
+    <p>En VaniBlush creemos que el cuidado personal es un acto de amor propio. Descubre cosméticos cruelty-free diseñados para realzar tu belleza sin comprometer tu piel.</p>
+    <a href="productos.html" class="boton">Ver Productos</a>
+  </section>
 
-    <!-- Eslogan -->
-    <section class="intro">
-        <p>Aquí tendrás acceso a diferentes cosméticos de alta calidad a precios accesibles.</p>
+  <main>
+    <section>
+      <h2>Nuestros Destacados</h2>
+      <div class="galeria">
+        <article><img src="img/labial.jpg" alt="Labial mate"><p>Labiales Mate Hidratantes</p></article>
+        <article><img src="img/crema.jpg" alt="Crema facial"><p>Crema Facial con Vitamina C</p></article>
+        <article><img src="img/paleta.jpg" alt="Paleta de sombras"><p>Paleta de Sombras Rose Sunset</p></article>
+      </div>
     </section>
+  </main>
 
-    <hr>
-
-    <!-- Imagen secundaria -->
-    <div class="logo">
-        <img src="imagen2.jpeg" alt="2do logo VaniBlush" width="400">
-    </div>
-
-    <!-- Aviso de stock -->
-    <section class="aviso">
-        <h3>⚠️ Por el momento nos encontramos sin stock en nuestros productos ⚠️</h3>
-    </section>
-
-    <!-- Párrafo normal -->
-    <p>Página creada por <strong>Juan Mateo</strong> y <strong>Arely</strong> 😀</p>
-
-    <!-- Párrafo con clase titulo -->
-    <p class="titulo">✨ Sección especial de la tienda ✨</p>
-
-    <!-- Caja -->
-    <div class="caja">
-        Esta es una caja de ejemplo con fondo amarillo, borde azul, padding y margin.
-    </div>
-
-    <!-- Párrafo único -->
-    <p id="especial">🌟 Este párrafo es único, con estilo diferente 🌟</p>
-
-    <!-- Botón -->
-    <div class="centrado">
-        <button class="boton">💄 Explorar productos</button>
-    </div>
-
-    <!-- Contenedor -->
-    <div class="contenedor borde fondo esquinas sombra">
-        Este es un contenedor con varios estilos combinados.
-    </div>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 VaniBlush - Todos los derechos reservados</p>
-    </footer>
+  <footer>
+    <p>© 2025 VaniBlush | Hecho con 💕 por Juan Mateo y Arely</p>
+  </footer>
 </body>
 </html>
